--- a/project/res/layout/section_hotel_summary_tablet.xml
+++ b/project/res/layout/section_hotel_summary_tablet.xml
@@ -2,7 +2,7 @@
 <com.expedia.bookings.section.HotelSummarySection xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/tablet_tripbucket_card_height"
+    android:layout_height="wrap_content"
     android:background="@color/tablet_white_pane_bg"
     android:paddingBottom="6dp"
     android:paddingLeft="12dp"
@@ -11,46 +11,40 @@
     app:priceTextColor="?attr/hotelPriceStandardColor"
     app:salePriceTextColor="?attr/hotelPriceSaleColor">
 
+    <TextView
+        android:id="@+id/urgency_text_view_color_matched"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/hotel_row_med_container_height"
+        android:layout_below="@id/hotel_background_view"
+        android:gravity="center"
+        android:includeFontPadding="false"
+        android:paddingTop="3dp"
+        android:paddingBottom="5.5dp"
+        android:singleLine="true"
+        android:textColor="@android:color/white"
+        android:textStyle="bold"
+        android:visibility="gone"/>
+
     <com.expedia.bookings.widget.OptimizedImageView
         android:id="@+id/hotel_background_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/tablet_tripbucket_card_height"
         android:scaleType="centerCrop"/>
 
     <View
         android:id="@+id/gradient_header_mask"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignLeft="@id/hotel_background_view"
+        android:layout_alignRight="@id/hotel_background_view"
+        android:layout_alignTop="@id/hotel_background_view"
+        android:layout_alignBottom="@id/hotel_background_view"
         android:background="@drawable/bg_hotel_details_header_gradient" />
-
-    <!-- This FrameLayout is required by HotelSummarySection.java for color matching -->
-
-    <FrameLayout
-        android:id="@+id/urgency_message_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="-8dp"
-        android:layout_marginBottom="2.5dp"
-        android:padding="3dp">
-
-        <TextView
-            android:id="@id/urgency_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:includeFontPadding="false"
-            android:singleLine="true"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"
-            android:visibility="gone"/>
-    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@id/urgency_message_container"
-        android:layout_alignWithParentIfMissing="true"
+        android:layout_alignBottom="@id/hotel_background_view"
         android:layout_margin="12dp"
         android:orientation="horizontal">
 
@@ -173,7 +167,19 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/hotel_card_corners" />
+        android:layout_height="3dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/hotel_card_corners_top" />
+
+    <View
+        android:id="@+id/card_corners_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="6dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/hotel_card_corners_bottom" />
 
 </com.expedia.bookings.section.HotelSummarySection>
