--- a/project/res/values/dimens.xml
+++ b/project/res/values/dimens.xml
@@ -169,6 +169,9 @@
     <dimen name="percent_off_corner_margin_top">3dp</dimen>
     <dimen name="percent_off_corner_margin_right">2dp</dimen>
 
+    <!-- Tablet specific hotel row dimensions -->
+    <dimen name="hotel_row_med_container_height">28dp</dimen>
+
     <!-- Text sizes for amenities -->
     <dimen name="amenity_text_size_large">12sp</dimen>
     <dimen name="amenity_text_size_small">10sp</dimen>
