--- a/project/res/values-sw600dp/integers.xml
+++ b/project/res/values-sw600dp/integers.xml
@@ -3,5 +3,8 @@
 
     <!-- login button font style: 0 = normal, 32 = light -->
     <integer name="login_button_text_style">32</integer>
+    <!-- Hotel details rooms rates, description body length cutoff -->
+    <integer name="room_rate_description_body_length_cutoff_less">50</integer>
+    <integer name="room_rate_description_body_length_cutoff_more">100</integer>
 
 </resources>
