--- a/project/res/layout/row_user_review.xml
+++ b/project/res/layout/row_user_review.xml
@@ -2,14 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="10dp" >
+    android:paddingTop="27dp" >
 
     <View
         android:id="@+id/user_review_separator"
         android:layout_width="match_parent"
         android:layout_height="@dimen/one_px_hdpi_two_px_xhdpi"
         android:layout_alignParentTop="true"
-        android:layout_marginBottom="9dp"
+        android:layout_marginBottom="14dp"
         android:background="#edeef0" />
 
     <com.expedia.bookings.widget.TextView
@@ -29,6 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/user_review_title_text_view"
+        android:layout_marginTop="5dp"
         android:gravity="center_vertical"
         android:orientation="horizontal" >
 
