--- a/project/res/drawable/btn_tablet_user_review_segment_pressed.xml
+++ b/project/res/drawable/btn_tablet_user_review_segment_pressed.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="#d9dadb" />
+    <solid android:color="#33000000" />
 
 </shape>
