--- a/project/res/layout/fragment_tablet_hotel_reviews.xml
+++ b/project/res/layout/fragment_tablet_hotel_reviews.xml
@@ -23,95 +23,121 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical" >
 
-                <LinearLayout
-                    android:id="@+id/user_reviews_view"
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="#edeef0"
-                    android:orientation="vertical" >
+                    android:layout_height="112dp" >
 
-                    <FrameLayout
+                    <ImageView
+                        android:id="@+id/hotel_header_image"
                         android:layout_width="match_parent"
-                        android:layout_height="56dp"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal" >
+                        android:layout_height="@dimen/hotel_header_height"
+                        android:layout_gravity="bottom"
+                        android:background="#2a2a2a"
+                        android:scaleType="centerCrop"
+                        android:src="?attr/hotelImagePlaceHolderDrawable" />
 
-                        <TextView
-                            android:id="@+id/reviews_title"
-                            android:layout_width="wrap_content"
-                            android:layout_height="56dp"
-                            android:background="@drawable/btn_tablet_user_review_segment"
-                            android:drawableLeft="@drawable/abs__ic_ab_back_holo_light"
-                            android:gravity="center_vertical"
-                            android:padding="8dp"
-                            android:textSize="18dp" />
-
-                    </FrameLayout>
+                    <View
+                        android:id="@+id/dominant_color_header_mask"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
 
                     <View
                         android:layout_width="match_parent"
-                        android:layout_height="4dp"
-                        android:background="@drawable/div_tablet_reviews_header" />
+                        android:layout_height="@dimen/one_px_hdpi_two_px_xhdpi"
+                        android:layout_gravity="bottom"
+                        android:background="#66000000" />
 
-                    <com.mobiata.android.widget.SegmentedControlGroup
-                        android:id="@+id/user_review_sort_group"
-                        style="@style/V2.Widget.SegmentedControlGroup.TabletUserReviews"
-                        android:layout_width="fill_parent"
-                        android:layout_height="56dp"
-                        android:background="#edeef0"
-                        android:orientation="horizontal" >
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical" >
 
-                        <RadioButton
-                            android:id="@+id/user_review_button_recent"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:contentDescription="@string/cd_display_recent_reviews"
-                            android:gravity="center"
-                            android:text="@string/user_review_sort_button_recent"
-                            android:textAllCaps="true"
-                            android:textSize="14dp"
-                            android:textStyle="bold" />
+                        <FrameLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="56dp"
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal" >
 
-                        <View
-                            android:layout_width="@dimen/one_px_hdpi_two_px_xhdpi"
-                            android:layout_height="24dp"
-                            android:layout_gravity="center_vertical"
-                            android:background="#19000000" />
+                            <TextView
+                                android:id="@+id/reviews_title"
+                                android:layout_width="wrap_content"
+                                android:layout_height="56dp"
+                                android:background="@drawable/btn_tablet_user_review_segment"
+                                android:drawableLeft="@drawable/ic_action_bar_back_arrow"
+                                android:gravity="center_vertical"
+                                android:padding="8dp"
+                                android:textColor="#ffffff"
+                                android:textSize="18dp" />
 
-                        <RadioButton
-                            android:id="@+id/user_review_button_favorable"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:contentDescription="@string/cd_display_favorable_reviews"
-                            android:gravity="center"
-                            android:text="@string/user_review_sort_button_favorable"
-                            android:textAllCaps="true"
-                            android:textSize="14dp"
-                            android:textStyle="bold" />
+                        </FrameLayout>
 
-                        <View
-                            android:layout_width="@dimen/one_px_hdpi_two_px_xhdpi"
-                            android:layout_height="24dp"
-                            android:layout_gravity="center_vertical"
-                            android:background="#19000000" />
+                        <com.mobiata.android.widget.SegmentedControlGroup
+                            android:id="@+id/user_review_sort_group"
+                            style="@style/V2.Widget.SegmentedControlGroup.TabletUserReviews"
+                            android:layout_width="fill_parent"
+                            android:layout_height="56dp"
+                            android:orientation="horizontal" >
 
-                        <RadioButton
-                            android:id="@+id/user_review_button_critical"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:contentDescription="@string/cd_display_critical_reviews"
-                            android:gravity="center"
-                            android:text="@string/user_review_sort_button_critical"
-                            android:textAllCaps="true"
-                            android:textSize="14dp"
-                            android:textStyle="bold" />
+                            <com.gridlayout.Space
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1" />
 
-                    </com.mobiata.android.widget.SegmentedControlGroup>
+                            <RadioButton
+                                android:id="@+id/user_review_button_recent"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="2"
+                                android:contentDescription="@string/cd_display_recent_reviews"
+                                android:gravity="center"
+                                android:text="@string/user_review_sort_button_recent"
+                                android:textAllCaps="true"
+                                android:textSize="14dp"
+                                android:textStyle="bold" />
 
-                </LinearLayout>
+                            <com.gridlayout.Space
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1" />
+
+                            <RadioButton
+                                android:id="@+id/user_review_button_favorable"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="2"
+                                android:contentDescription="@string/cd_display_favorable_reviews"
+                                android:gravity="center"
+                                android:text="@string/user_review_sort_button_favorable"
+                                android:textAllCaps="true"
+                                android:textSize="14dp"
+                                android:textStyle="bold" />
+
+                            <com.gridlayout.Space
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1" />
+
+                            <RadioButton
+                                android:id="@+id/user_review_button_critical"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="2"
+                                android:contentDescription="@string/cd_display_critical_reviews"
+                                android:gravity="center"
+                                android:text="@string/user_review_sort_button_critical"
+                                android:textAllCaps="true"
+                                android:textSize="14dp"
+                                android:textStyle="bold" />
+
+                            <com.gridlayout.Space
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1" />
+
+                        </com.mobiata.android.widget.SegmentedControlGroup>
+
+                    </LinearLayout>
+                </FrameLayout>
 
                 <android.support.v4.view.ViewPager
                     android:id="@+id/pager"
