--- a/project/res/layout/include_tablet_legal_blurb_tv.xml
+++ b/project/res/layout/include_tablet_legal_blurb_tv.xml
@@ -6,5 +6,5 @@
           android:layout_marginTop="16dp"
           android:linksClickable="false"
           android:autoLink="web"
-          android:textColorLink="@color/holo_blue_light"
+          android:textColorLink="#A7DAFF"
           android:textColor="@android:color/white"/>
