2758 add spacing to flight list card baggage icon
Also, this generally adds some spacing between the airline TextView
and the price TextView.

--- a/project/res/values/dimens.xml
+++ b/project/res/values/dimens.xml
@@ -309,6 +309,7 @@
     <dimen name="tablet_hotel_map_popup_thumbnail_width">111dp</dimen>
 
     <!-- Flight baggage fee stuff -->
+    <dimen name="tablet_flight_list_baggage_fee_icon_padding">5dp</dimen>
     <dimen name="flight_details_baggage_fee_text_view_text_size">12dp</dimen>
 
     <!-- Credit card dimens phone -->
