--- a/project/res/layout/section_flight_leg_tablet_blue_card.xml
+++ b/project/res/layout/section_flight_leg_tablet_blue_card.xml
@@ -36,8 +36,10 @@
                 android:id="@+id/airline_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/tablet_flight_list_baggage_fee_icon_padding"
                 android:ellipsize="middle"
                 android:singleLine="true"
+                android:drawablePadding="@dimen/tablet_flight_list_baggage_fee_icon_padding"
                 android:textColor="#ffffff"
                 android:textSize="@dimen/tablet_result_row_secondary_text_size"
                 app:textStyle="light"/>
