--- a/project/res/layout/fragment_tablet_hotel_details.xml
+++ b/project/res/layout/fragment_tablet_hotel_details.xml
@@ -39,6 +39,30 @@
                     android:background="#d1d1d1" />
 
                 <LinearLayout
+                    android:id="@+id/mobile_exclusive_container"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_toLeftOf="@id/reviews_section_divider"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignWithParentIfMissing="true"
+                    android:gravity="center">
+
+                    <View
+                        android:layout_width="36dp"
+                        android:layout_height="36dp"
+                        android:background="#40ff0000"/>
+
+                    <com.expedia.bookings.widget.TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="8dp"
+                        android:textSize="16sp"
+                        android:text="@string/mobile_exclusive"
+                        app:textStyle="light"/>
+                </LinearLayout>
+
+                <LinearLayout
                     android:id="@+id/rooms_left_container"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
