--- a/project/res/layout/section_hotel_tablet_edit_traveler.xml
+++ b/project/res/layout/section_hotel_tablet_edit_traveler.xml
@@ -6,6 +6,15 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
+    <!-- Dummy focus clear -->
+
+    <View
+        android:id="@+id/focus_stealer"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true"/>
+
     <ImageView
         android:layout_width="48dp"
         android:layout_height="48dp"
