--- a/project/res/layout/include_edit_traveler_names_reversed_tablet.xml
+++ b/project/res/layout/include_edit_traveler_names_reversed_tablet.xml
@@ -1,10 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
 This is a SectionTraveler compatible include (so please dont change ids)
 We have moved this because some Locales (Japan) prefer different name orders
 -->
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-    >
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,9 +10,9 @@ We have moved this because some Locales (Japan) prefer different name orders
         android:layout_marginBottom="4dp"
         android:orientation="horizontal">
 
-        <EditText
+        <com.expedia.bookings.widget.AlwaysFilterAutoCompleteTextView
             android:id="@+id/edit_last_name"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:focusable="true"
@@ -24,12 +22,11 @@ We have moved this because some Locales (Japan) prefer different name orders
             android:nextFocusDown="@+id/edit_middle_name"
             android:nextFocusRight="@+id/edit_middle_name"
             android:paddingBottom="12dp"
-            android:singleLine="true">
-        </EditText>
+            android:singleLine="true" />
 
         <EditText
             android:id="@+id/edit_middle_name"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="@string/middle_name"
@@ -37,17 +34,18 @@ We have moved this because some Locales (Japan) prefer different name orders
             android:nextFocusDown="@+id/edit_first_name"
             android:nextFocusRight="@+id/edit_first_name"
             android:paddingBottom="12dp"
-            android:singleLine="true"/>
+            android:singleLine="true" />
 
         <EditText
             android:id="@+id/edit_first_name"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:layout_marginBottom="4dp"
             android:hint="@string/first_name"
             android:inputType="textPersonName|textCapWords"
             android:paddingBottom="12dp"
-            android:singleLine="true"/>
+            android:singleLine="true" />
     </LinearLayout>
 
 </merge>
