Wire up the child age spinners on tablet

--- a/project/res/layout/fragment_results_guests.xml
+++ b/project/res/layout/fragment_results_guests.xml
@@ -78,5 +78,10 @@
                 android:textSize="32dp"
                 android:text="+" />
         </LinearLayout>
+
+        <include
+            layout="@layout/include_child_age_selectors" />
+
+
     </LinearLayout>
 </ScrollView>
