Created a couple dimens for hotel details
Addresses concern raised on 8ee5a6a

--- a/project/res/layout/fragment_tablet_hotel_details.xml
+++ b/project/res/layout/fragment_tablet_hotel_details.xml
@@ -219,13 +219,13 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentLeft="true"
-                    android:layout_marginLeft="12dp"
-                    android:layout_marginTop="12dp"
+                    android:layout_marginLeft="@dimen/hotel_details_callout_text_margin_x"
+                    android:layout_marginTop="@dimen/hotel_details_callout_text_margin_y"
                     android:background="@drawable/bg_vip_badge"
-                    android:paddingBottom="5dp"
-                    android:paddingLeft="12dp"
-                    android:paddingRight="12dp"
-                    android:paddingTop="5dp"
+                    android:paddingBottom="@dimen/hotel_details_callout_text_padding_y"
+                    android:paddingLeft="@dimen/hotel_details_callout_text_padding_x"
+                    android:paddingRight="@dimen/hotel_details_callout_text_padding_x"
+                    android:paddingTop="@dimen/hotel_details_callout_text_padding_y"
                     android:text="@string/VIP"
                     android:textColor="@android:color/white"
                     android:visibility="gone" />
@@ -238,13 +238,13 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="12dp"
-                    android:layout_marginTop="12dp"
+                    android:layout_marginRight="@dimen/hotel_details_callout_text_margin_x"
+                    android:layout_marginTop="@dimen/hotel_details_callout_text_margin_y"
                     android:background="@drawable/bg_sale_text_view"
-                    android:paddingBottom="5dp"
-                    android:paddingLeft="12dp"
-                    android:paddingRight="12dp"
-                    android:paddingTop="5dp"
+                    android:paddingBottom="@dimen/hotel_details_callout_text_padding_y"
+                    android:paddingLeft="@dimen/hotel_details_callout_text_padding_x"
+                    android:paddingRight="@dimen/hotel_details_callout_text_padding_x"
+                    android:paddingTop="@dimen/hotel_details_callout_text_padding_y"
                     android:includeFontPadding="false"
                     android:singleLine="true"
                     android:textColor="@android:color/white"
