--- a/project/res/layout/fragment_results_guests.xml
+++ b/project/res/layout/fragment_results_guests.xml
@@ -11,6 +11,26 @@
         android:layout_margin="8dp"
         android:orientation="vertical">
 
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tablet_guest_picker_header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:textSize="24sp" />
+            <TextView
+                android:id="@+id/tablet_guest_picker_done_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:textSize="18sp"
+                android:text="@string/DONE"
+                android:textColor="#3E79A3" />
+        </FrameLayout>
+
         <LinearLayout
             android:id="@+id/adult_container"
             android:layout_width="match_parent"
