2786: Added ic_med asset to hotel details

--- a/project/res/layout/fragment_tablet_hotel_details.xml
+++ b/project/res/layout/fragment_tablet_hotel_details.xml
@@ -48,10 +48,11 @@
                     android:layout_alignWithParentIfMissing="true"
                     android:gravity="center">
 
-                    <View
+                    <ImageView
                         android:layout_width="36dp"
                         android:layout_height="36dp"
-                        android:background="#40ff0000"/>
+                        android:scaleType="center"
+                        android:src="@drawable/ic_med"/>
 
                     <com.expedia.bookings.widget.TextView
                         android:layout_width="wrap_content"
