--- a/project/res/layout/fragment_results_guests.xml
+++ b/project/res/layout/fragment_results_guests.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#FFFFFF"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:background="#FFFFFF"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,12 +15,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/tablet_guest_picker_header"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
-                android:textSize="24sp" />
+                android:textSize="24sp"/>
+
             <TextView
                 android:id="@+id/tablet_guest_picker_done_button"
                 android:layout_width="wrap_content"
@@ -28,7 +30,7 @@
                 android:layout_gravity="right"
                 android:textSize="18sp"
                 android:text="@string/DONE"
-                android:textColor="#3E79A3" />
+                android:textColor="#3E79A3"/>
         </FrameLayout>
 
         <LinearLayout
@@ -46,13 +48,13 @@
                 android:textSize="32dp"
                 android:textColor="#3F3F3F"
                 android:layout_weight="1"
-                android:text="-" />
+                android:text="-"/>
 
             <TextView
                 android:id="@+id/adult_count_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="24dp" />
+                android:textSize="24dp"/>
 
             <TextView
                 android:id="@+id/adults_plus"
@@ -62,9 +64,9 @@
                 android:layout_weight="1"
                 android:textColor="#3F3F3F"
                 android:textSize="32dp"
-                android:text="+" />
+                android:text="+"/>
         </LinearLayout>
-
+        <!-- Pluses and minuses will be replaced with drawables when we get them -->
         <LinearLayout
             android:id="@+id/children_container"
             android:layout_width="match_parent"
@@ -80,7 +82,7 @@
                 android:textSize="32dp"
                 android:textColor="#3F3F3F"
                 android:layout_weight="1"
-                android:text="-" />
+                android:text="-"/>
 
             <TextView
                 android:id="@+id/child_count_text"
@@ -96,12 +98,21 @@
                 android:layout_weight="1"
                 android:textColor="#3F3F3F"
                 android:textSize="32dp"
-                android:text="+" />
+                android:text="+"/>
         </LinearLayout>
 
         <include
-            layout="@layout/include_child_age_selectors" />
+            layout="@layout/include_child_age_selectors"/>
 
-
+            <TextView
+                android:id="@+id/tablet_lap_infant_alert"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:background="#FF9900"
+                android:textColor="#F3F3F3"
+                android:textSize="16sp"
+                android:text="@string/not_enough_laps_for_infants"
+                android:visibility="gone"/>
     </LinearLayout>
 </ScrollView>
