--- a/project/res/layout/fragment_tablet_tripbucket_item.xml
+++ b/project/res/layout/fragment_tablet_tripbucket_item.xml
@@ -1,37 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="0dp"
-    android:background="@android:color/transparent"
-    android:padding="0dp">
+    android:orientation="vertical" >
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="0dp"
-        android:orientation="vertical"
-        android:padding="0dp">
+        android:layout_height="wrap_content" >
+
+        <FrameLayout
+            android:id="@+id/trip_bucket_item_expanded_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/tablet_tripbucket_card_height"
+            android:background="#ffffff"
+            android:visibility="gone" />
 
         <FrameLayout
             android:id="@+id/trip_bucket_item_top_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-        <FrameLayout
-            android:id="@+id/trip_bucket_item_expanded_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone"/>
+    </FrameLayout>
 
-        <FrameLayout
-            android:id="@+id/trip_bucket_item_price_change_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone"/>
+    <FrameLayout
+        android:id="@+id/trip_bucket_item_price_change_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
 
-    </LinearLayout>
-
-</FrameLayout>
+</LinearLayout>
