--- a/project/res/layout/fragment_flight_tablet_filter.xml
+++ b/project/res/layout/fragment_flight_tablet_filter.xml
@@ -26,6 +26,33 @@
                         android:text="@string/Sort_and_Filter" />
 
                 <com.expedia.bookings.widget.TextView
+                    style="@style/V2.Widget.TextView.FilterHeader"
+                    android:id="@+id/infant_toggle_header"
+                    android:layout_marginBottom="8dp"
+                    android:text="@string/header_child_traveler_seating" />
+
+                <FrameLayout
+                    android:id="@+id/infant_toggle_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left"
+                        android:layout_marginTop="5dp"
+                        android:text="@string/infant_seating_spinner_title"
+                        android:textSize="16sp"/>
+                    <Spinner
+                        android:id="@+id/edit_infant_seating_spinner"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:layout_marginBottom="4dp" />
+
+                    </FrameLayout>
+
+                <com.expedia.bookings.widget.TextView
                         style="@style/V2.Widget.TextView.FilterHeader"
                         android:layout_marginBottom="8dp"
                         android:text="@string/Sort_By" />
