--- a/project/res/layout/fragment_tablet_hotel_details.xml
+++ b/project/res/layout/fragment_tablet_hotel_details.xml
@@ -48,15 +48,15 @@
                     android:layout_alignWithParentIfMissing="true"
                     android:gravity="center">
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_med"/>
+                    <com.larvalabs.svgandroid.widget.SVGView
+                        android:layout_width="25.5dp"
+                        android:layout_height="26dp"
+                        app:src="@raw/ic_med" />
 
                     <com.expedia.bookings.widget.TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingLeft="8dp"
+                        android:paddingLeft="11dp"
                         android:textSize="16sp"
                         android:text="@string/mobile_exclusive"
                         app:textStyle="light"/>
