2697. How to handle price changes
Users can now see a price notification in the overview screen.
Let's make a new TripBucketItemState "SHOWING_PRICE_CHANGE"
This should make things a lot easier to identify and change visibilities.

--- a/project/res/layout/fragment_tablet_tripbucket_item.xml
+++ b/project/res/layout/fragment_tablet_tripbucket_item.xml
@@ -26,6 +26,12 @@
             android:layout_height="wrap_content"
             android:visibility="gone"/>
 
+        <FrameLayout
+            android:id="@+id/trip_bucket_item_price_change_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
+
     </LinearLayout>
 
 </FrameLayout>
