--- a/project/res/layout-sw600dp/section_hotel_edit_traveler.xml
+++ b/project/res/layout-sw600dp/section_hotel_edit_traveler.xml
@@ -40,7 +40,8 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
+                android:layout_gravity="bottom"
                 android:orientation="horizontal">
 
                 <com.expedia.bookings.widget.TelephoneSpinner
@@ -48,14 +49,15 @@
                     style="@style/Widget.Spinner.Tablet"
                     app:text_view_layout="@layout/simple_spinner_item_18"
                     android:layout_width="96dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="40dp"
                     />
 
                 <EditText
                     android:id="@+id/edit_phone_number"
                     android:layout_width="0dp"
                     android:layout_weight="1"
-                    android:layout_height="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_gravity="bottom"
                     android:hint="@string/phone_number_hint"
                     android:inputType="phone"
                     android:singleLine="true"
@@ -65,7 +67,8 @@
             <EditText
                 android:id="@+id/edit_email_address"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
+                android:layout_gravity="bottom"
                 android:layout_weight="1"
                 android:hint="@string/email_address_hint"
                 android:inputType="textEmailAddress"
