--- a/project/res/layout-sw600dp/section_hotel_edit_traveler.xml
+++ b/project/res/layout-sw600dp/section_hotel_edit_traveler.xml
@@ -16,10 +16,10 @@
         android:focusableInTouchMode="true"/>
 
     <ImageView
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginRight="8dp"
-        android:src="@drawable/ic_traveler"/>
+        android:src="@drawable/ic_tablet_checkout_generic_traveler"/>
 
     <LinearLayout
         android:orientation="vertical"
