--- a/project/res/values-sw600dp/dimens.xml
+++ b/project/res/values-sw600dp/dimens.xml
@@ -45,4 +45,11 @@
     <!-- Tablet User review dimens -->
     <dimen name="user_review_text_padding_right">32dp</dimen>
 
+    <!-- Tablet trip bucket dimens -->
+    <dimen name="hotel_flight_card_height">120dp</dimen>
+    <dimen name="tripbucket_bookbutton_height">40dp</dimen>
+    <dimen name="trip_bucket_primary_dest_size">46dp</dimen>
+    <dimen name="trip_bucket_root_layout_padding_top">80dp</dimen>
+    <dimen name="trip_bucket_empty_trip_container_padding_top">-40dp</dimen>
+
 </resources>
