2751: Fixed height and alignment of flight cards

--- a/project/res/layout/section_hotel_summary_tablet.xml
+++ b/project/res/layout/section_hotel_summary_tablet.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/tablet_white_pane_bg"
-    android:paddingBottom="6dp"
-    android:paddingLeft="12dp"
-    android:paddingRight="12dp"
-    android:paddingTop="6dp"
+    android:paddingBottom="@dimen/hotel_flight_card_padding_y"
+    android:paddingLeft="@dimen/hotel_flight_card_padding_x"
+    android:paddingRight="@dimen/hotel_flight_card_padding_x"
+    android:paddingTop="@dimen/hotel_flight_card_padding_y" >
     app:priceTextColor="?attr/hotelPriceStandardColor"
     app:salePriceTextColor="?attr/hotelPriceSaleColor">
 
