--- a/project/res/values/dimens.xml
+++ b/project/res/values/dimens.xml
@@ -297,10 +297,15 @@
 
     <!-- Hotel/Flight Card dimensions. Also known as hotel summary section -->
     <!-- These are also used on the hotel and flight trip bucket items -->
+    <!-- TODO: move this to layout-sw800dp -->
     <dimen name="hotel_flight_card_height">148dp</dimen>
     <dimen name="hotel_flight_card_width">352dp</dimen>
+    <dimen name="hotel_flight_card_height_with_padding">160dp</dimen>
+    <dimen name="hotel_flight_card_padding_x">12dp</dimen>
+    <dimen name="hotel_flight_card_padding_y">6dp</dimen>
 
     <!-- Tablet trip bucket dimens -->
+    <!-- TODO: move this to layout-sw800dp -->
     <dimen name="tripbucket_bookbutton_height">50dp</dimen>
     <dimen name="trip_bucket_item_horizontal_margin">32dp</dimen>
     <dimen name="trip_bucket_swipe_out_distance">48dp</dimen>
